2020-01-29 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Remove cast to void pointer from
      geda_get_widget_style macro.

    * include/geda_toggle_action.h: Remove const qualifier from action_name.

    * src/widgets/geda_combobox.c: Revise geda_combo_box_size_request; change
      int specifier to unsigned for focus_width, focus_pad, font_size and
      int arrow_size;

2020-01-28 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_adjustment_lower
          * geda_get_adjustment_page_size
          * geda_get_adjustment_upper
          * geda_get_adjustment_value
          * geda_set_widget_allocation

    * src/widgets/geda_combobox.c: Revise geda_combo_box_remove to
      not bother setting is_cell_renderer to FALSE, utilize macro
      geda_get_widget_style.

2020-01-27 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Utilize macros:

          * geda_get_widget_in_destruction
          * geda_get_widget_style
          * geda_get_widget_window
          * geda_set_widget_allocation
          * geda_get_container_border_width
          * geda_get_child_widget

2020-01-24 Wiley E. Hill <wileyhill@gmail.com>

    * src/widgets/geda_combobox.c: Utilize geda_get_child_widget macro in
      functions.

          * geda_combo_box_remove
          * geda_combo_box_grab_focus
          * geda_combo_box_mnemonic_activate
          * geda_combo_box_set_property
          * geda_combo_box_buildable_get_internal_child
          * geda_combo_box_menu_item_activate
          * geda_combo_box_entry_active_changed
          * geda_combo_box_start_editing
          * geda_combo_widget_get_entry_widget

2020-01-23 Wiley E. Hill <wileyhill@gmail.com>

    * include/geda_gtk_compat.h: Add macros:

          * geda_get_widget_in_destruction
          * geda_set_bin_child

    * src/widgets/geda_combobox.c: Utilize geda_set_bin_child macro in
      functions:
